# Analisis_Datos_Anime

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: Anime.ipynb
notebooks/: Anime.ipynb
reports/: Analisis_de_datos_anime_Exposicion.pptx
